<resources>
    <string name="app_name">Daily Update</string>
    <string name="select_your_country">Select your country</string>
    <string name="developer_rights">This app\'s @copyrights belong to Sanjeev Kumar</string>
    <string name="country">Country</string>
    <string name="continue1">Continue</string>
    <string name="setting">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="read_details">Read Details...</string>
    <string name="news_image">News Image</string>
    <string name="back">Back</string>

    <string-array name="country">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>United Arab Emirates</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Venezuela</item>
    </string-array>
    <string-array name="theme">
        <item>Theme 1</item>
        <item>Theme 2</item>
        <item>Theme 3</item>
        <item>Theme 4</item>
        <item>Theme 5</item>
    </string-array>
</resources>