<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/backImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="@dimen/_15ssp"
                android:layout_toEndOf="@id/backImage"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/_5sdp"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/appbar"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_country"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_marginStart="@dimen/_10sdp"/>
        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:hint="@string/country"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14.5sp"
            android:textColorHint="@color/dividerColor"
            app:spinner_arrow_tint="@android:color/black"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@color/dividerColor"
            app:spinner_divider_show="true"
            app:spinner_divider_size="@dimen/_1sdp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@android:color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:spinner_item_array="@array/country"
            app:spinner_popup_height="@dimen/_250sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dividerColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_theme"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_regular"/>
        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/themeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:hint="@string/select_theme"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14.5sp"
            android:textColorHint="@color/dividerColor"
            app:spinner_arrow_tint="@android:color/black"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@color/dividerColor"
            app:spinner_divider_show="true"
            app:spinner_divider_size="@dimen/_1sdp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@android:color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:spinner_item_array="@array/theme"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dividerColor"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        app:rippleColor="@android:color/white"/>

</RelativeLayout>